cargo-features = ["strip"]

[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Sologub Radu <radu@sologub.md>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"
codegen-units = 1
#debug = false

[profile.dev]
panic = "abort"


[dependencies]
# libc = {version = "0.2.116", features = ["extra_traits"] }
# winapi = "0.3.9"
# kernel32-sys = "0.2.1"
lazy_static = "1.4.0"
winconsole = "*"
crossterm = "0.9.3"
rand = "*"